<resources>
    <string name="app_name">Sistema de Navegacao</string>
    <string name="localizar">Localizar</string>
    <string name="configurar">Configurar</string>
    <string name="sat">Satélite</string>
    <string name="sobre">Sobre</string>
    <string name="vetorial">Vetorial</string>
    <string name="ImagemSatelite">Imagem Satelite</string>
    <string name="graudecimal">Grau Decimal</string>
    <string name="grauminuto">Grau-Minuto Decimal</string>
    <string name="grauminutodsegundo">Grau-Minuto-Segundo Decimal</string>
    <string name="km">Km/h</string>
    <string name="mph">Mph</string>
    <string name="nenhuma">Nenhuma</string>
    <string name="north">North Up</string>
    <string name="course">Course Up</string>
    <string name="trafego">Informações de Tráfego</string>
    <string name="title_activity_mapa">Map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="city">Present Location</string>
    <string name="no_text"> </string>
    <string name="grauDecimal">Grau Decimal</string>
    <string name="grauMinuto"> Grau-Minuto Decimal</string>
    <string name="grauSegundo"> Grau-Minuto-Segundo Decimal</string>
    <string name="radiobutton">RadioButton</string>
    <string name="formato"><b>Formato de apresentação:</b></string>
    <string name="unidade"><b>Unidade de apresentação:</b></string>
    <string name="orientacao"><b>Orientação do mapa:</b></string>
    <string name="tipo"><b>Tipo do Mapa:</b></string>
    <string name="imagem">Imagem de Satélite</string>
    <string name="todo">TODO</string>
    <string name="imagemtela">TODO</string>
    <string name="botao">Salvar Configurações</string>
    <string name="gnss_title">GNSS</string>
    <string name="snr_title">SNR</string>
    <string name="elev_title">ELEV</string>
    <string name="azim_title">AZIM</string>
    <string name="ceu">Céu</string>
    <string name="sistema"><b>SISTEMA DE NAVEGAÇÃO</b></string>
    <string name="historico"><b>Histórico de Localização</b></string>
    <string name="title_activity_historico">historico</string>
    <string name="title_home">Mapa Aqui</string>
    <string name="title_dashboard">Historico aqui</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list_view">Lista</string>
    <string name="title_map_view">Mapa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    snr_title
</resources>
